Fix bug: die roll log going off screen

--- a/Software/react-canvas-draw/src/App.css
+++ b/Software/react-canvas-draw/src/App.css
@@ -381,6 +381,8 @@
 
 .characterContent {
     padding: 15px;
+    overflow-x:hidden;
+    overflow-wrap:anywhere;
     overflow-y: auto;
     height: 90%;
 }
